# filter_app

./: .gitignore  CMakeLists.txt  LICENSE  README.md
cfgs/: filter_coeffs.json
includes/: filter.h  utils.h  vector_utils.h
py_tools/: filter_data_parse.py
src/: filter_app.cpp  test_app.cpp
